[package]
name = "sgt"
version = "1.0.6"
authors = ["Bradley Hutchinson <bradley.hutchinson@keysight.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
reqwest = {version = "0.11", features = ["blocking"]}
eframe = { version = "*", default-features = false, features = ["default_fonts", "egui_glow"] }
clipboard = "0.5"
strum = {version = "0.23", features = ["derive"]}
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
anyhow = "1.0"
image = "0.23"
dirs = "4.0"
chrono = "*"
zip = {version = "0.5.13", default-features = false, features=["deflate", "time"]}
glob = "0.3.0"
gethostname = "0.2.1"
random_word = "0.3.0"
lazy_static = "1.4.0"
rocket = "0.5.0-rc.2"

[target.'cfg(windows)'.dependencies]
win-event-log = { git = "https://github.com/rustysec/win-event-log-rs" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
